--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -9,7 +9,11 @@
      <init-param>
              <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
                <param-value>true</param-value>
-           </init-param>
+     </init-param>
+     <init-param>
+    <param-name>com.sun.jersey.config.feature.DisableWADL</param-name>
+    <param-value>true</param-value>
+     </init-param>
      <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
@@ -33,5 +37,9 @@
   <url-pattern>/_ah/spi/*</url-pattern>
  </servlet-mapping>
  
+ <login-config>
+ <auth-method>BASIC</auth-method>
+ <realm-name>default</realm-name>
+ </login-config>
  
 </web-app>
